@@ -1,3 +1,7 @@
+2021-12-08  Dirk Eddelbuettel  <edd@debian.org>
+
+	* README.md: Remove unused continuous integration artifact and badge
+
 2021-04-24  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (URL): Add repo
